[package]
name = "shoalart"
version = "0.0.100"
edition = "2021"
authors = ["K--A"]

description = "(WIP) Powerful ASCII Art generator, but not yet easy to use."

documentation = "https://docs.rs/shoalart"
repository = "https://github.com/eternal-io/shoalart"
license = "MIT OR Apache-2.0"
readme = "README.md"

keywords = ["ascii-art", "character", "terminal"]
categories = [
    "algorithms",
    "command-line-utilities",
    "graphics",
    "multimedia::images",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
crossterm = "0.22.1"
edge-detection = "0.2.5"
image = "0.23.14"
lz4_flex = "0.9.2" # 压到就是赚到，校验才是王道。反正速度这么快，不嫖白不嫖。
rusttype = "0.9.2"
rustdct = "0.6.0"
scrap = "0.5.0"
structopt = "0.3.25"
unicode-width = "0.1.9"

[profile.dev]
opt-level = 2
